cluster_config_backup/2023_12_02/per_resource_api/virtualservices.networking.istio.io.default.bookinfo.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"bookinfo","namespace":"default"},"spec":{"gateways":["bookinfo-gateway"],"hosts":["*"],"http":[{"match":[{"uri":{"exact":"/productpage"}},{"uri":{"prefix":"/static"}},{"uri":{"exact":"/login"}},{"uri":{"exact":"/logout"}},{"uri":{"prefix":"/api/v1/products"}}],"route":[{"destination":{"host":"productpage","port":{"number":9080},"subset":"west"},"headers":{"request":{"set":{"x-slate-isl [...]
  creationTimestamp: "2023-11-17T19:03:04Z"
  generation: 5
  name: bookinfo
  namespace: default
  resourceVersion: "1938557"
  uid: 0a0fda1e-e838-40f0-8fc0-26b70c745b22
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
        subset: west
      headers:
        request:
          set:
            x-slate-islocalroute: "1"
            x-slate-route: west-to-west
    - destination:
        host: productpage
        port:
          number: 9080
        subset: east
      headers:
        request:
          set:
            x-slate-islocalroute: "0"
            x-slate-route: west-to-east
      weight: 100
